--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+3.0.0 2020-12-18
+  - - Add sulcal labels and functional peaks for Eichert et al. 2020 BSF
 2.1.0 2020-09-16
   - Add individual task scans 
 2.0.1 2020-08-27
